--- a/ASLRocketShipToSpace/readme.html
+++ b/ASLRocketShipToSpace/readme.html
@@ -1,136 +1,1 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>Django Web App Configuration</title>
-    <style type="text/css">body {
-        font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
-        font-weight: 200;
-        font-size: 11pt;
-    }
-
-    p, h1, h2 {
-        margin: 0;
-        padding: 0;
-    }
-
-    h1 {
-        font-size: 20pt;
-        font-weight: bold;
-        padding-top: 1em;
-    }
-
-    h1.top {
-        padding-top: 0em;
-    }
-
-    h2 {
-        font-size: 16pt;
-        font-weight: 300;
-        padding-top: 0.5em;
-        padding-left: 0em;
-    }
-
-    p {
-        padding-left: 0.5em;
-        padding-bottom: 0.5em;
-    }
-
-    p.hint {
-        color: #666666;
-    }
-
-    code {
-        font-family: Consolas, 'Lucida Console', monospace;
-    }
-
-    ol {
-        margin-top: 0;
-        padding-top: 0;
-    }
-
-    ol > li {
-        padding-top: 1.5em;
-    }
-
-    li > img {
-        vertical-align: middle;
-    }</style>
-</head>
-<body>
-<h1>Inspiration</h1>
-<p>
-    The day to day life of an individual with a disability such as deafness is extremely challenging. Many educational
-    and job opportunities are not available because of the communication gap. Very few individuals that are not deaf
-    know American Sign Language (ASL) so this severely impacts deaf individuals and those that are hard of hearing. As a
-    result, many of them resort to using a pen and paper or a smartphone to type what they are thinking and show it to
-    the other person. We believe that this is very unfair that they have to do this and we believe that ASL to be more
-    common in our community, and worldwide.
-</p>
-
-<h1>What it does</h1>
-<p>
-    ASL Rocket is primarily intended for children to learn a new type of education which is the basics of ASL through a
-    fun learning method. Kids need to learn communication skills such as ASL because it fosters an environment that will
-    include individuals that are deaf and makes education more exciting. It has a space theme that helps makes learning
-    ASL engaging and interactive.
-
-    ASL Rocket begins with a dashboard where the user can easily see activities they can play to learn ASL. These
-    activities include a card matching game, a drag and drop game and lastly, a multiple-choice assessment.
-
-    In our mockup, other features included interactive videos the child can watch to learn and a system that keeps track
-    of the progress of the child's learning called the "Journey").
-</p>
-<h1>How we built it</h1>
-<p>
-    ASL Rocket was designed using Adobe XD. The web interface was built using the Python-based Django framework. CSS and
-    JavaScript were used to make the application more aesthetically pleasing and interactive. GitHub allowed us to
-    iteratively develop the application and ensure that we could collaborate on the code together. Lastly, it is hosted
-    on Azure with a domain from Domain.com. Our domain name is www.aslrocketto.space to help push the space theme of the
-    application.
-
-<h1>Challenges we ran into</h1>
-<p>
-    The initial challenge we had was thinking of an idea. Many potential ideas bounced around but this idea was chosen
-    because it had a personal attachment to one of the members as his neighbours are a deaf couple who face many
-    challenges daily. Another challenge was technical issues with the development environment for Django but rather than
-    being set back, the members worked on other elements of the project such as the design mockup and coding
-    functionalities in a similar language.
-
-
-</p>
-<h1>Accomplishments that we're proud of</h1>
-<p>
-    We are extremely proud that we came up with an application that can help make learning fun for kids and apply the
-    learning to help reduce inequalities amongst the disabled in our communities. We believe this will make a great
-    impact on education for the youth and help bring inclusivity for disabled individuals.
-
-    We are also proud that we were able to generate an idea, create a beautiful prototype and have a working application
-    that is hosted on the web for anyone to view, in a short period of time. We reinforced our communication,
-    collaboration and organizational skills as well as develop our skills in Python, Django, HTML/CSS/JavaScript as well
-    as Adobe XD.
-</p>
-<h1>What we learned:</h1>
-<p>
-    We learned about the hardships and challenge disabled individuals face daily. We also learned how to develop an
-    application with Django and explore the design capabilities of Adobe XD.
-
-</p>
-<h1>Next Steps ASL Rocket:</h1>
-<p>
-    Due to time constraints, we weren't able to include all of the features we had hoped to have in our mockups such as
-    video tutorials, a login system to keep track of progress and further levels. The ASL Rocket team hopes to continue
-    development in the near future.
-
-</p>
-<h1>Further ideas for ASL Rocket includes:</h1>
-<p>
-    Support for other disabilities such as blindness through the use of braille
-    Integration of other sign languages such as British Sign Language (BSL)
-    Machine learning algorithms which will be able to give constructive feedback in real-time on the ASL gestures the
-    child is attempting to make
-    Integration of ASL Rocket in school's curriculum around the world to help grow education and reduce inequalities of
-    disabled
-    Variants of ASL Rocket for different demographics such as teens and adults so that everyone can benefit from ASL
-</p>
-</body>
-</html>
+# Inspiration The day to day life of an individual with a disability such as deafness is extremely challenging. Many educational and job opportunities are not available because of the communication gap. Very few individuals that are not deaf know American Sign Language (ASL) so this severely impacts deaf individuals and those that are hard of hearing. As a result, many of them resort to using a pen and paper or a smartphone to type what they are thinking and show it to the other person. We believe that this is very unfair that they have to do this and we believe that ASL to be more common in our community, and worldwide. # What it does ASL Rocket is primarily intended for children to learn a new type of education which is the basics of ASL through a fun learning method. Kids need to learn communication skills such as ASL because it fosters an environment that will include individuals that are deaf and makes education more exciting. It has a space theme that helps makes learning ASL engaging and interactive. ASL Rocket begins with a dashboard where the user can easily see activities they can play to learn ASL. These activities include a card matching game, a drag and drop game and lastly, a multiple-choice assessment. In our mockup, other features included interactive videos the child can watch to learn and a system that keeps track of the progress of the child's learning called the "Journey"). # How we built it ASL Rocket was designed using Adobe XD. The web interface was built using the Python-based Django framework. CSS and JavaScript were used to make the application more aesthetically pleasing and interactive. GitHub allowed us to iteratively develop the application and ensure that we could collaborate on the code together. Lastly, it is hosted on Azure with a domain from Domain.com. Our domain name is www.aslrocketto.space to help push the space theme of the application. # Challenges we ran into The initial challenge we had was thinking of an idea. Many potential ideas bounced around but this idea was chosen because it had a personal attachment to one of the members as his neighbours are a deaf couple who face many challenges daily. Another challenge was technical issues with the development environment for Django but rather than being set back, the members worked on other elements of the project such as the design mockup and coding functionalities in a similar language. # Accomplishments that we're proud of We are extremely proud that we came up with an application that can help make learning fun for kids and apply the learning to help reduce inequalities amongst the disabled in our communities. We believe this will make a great impact on education for the youth and help bring inclusivity for disabled individuals. We are also proud that we were able to generate an idea, create a beautiful prototype and have a working application that is hosted on the web for anyone to view, in a short period of time. We reinforced our communication, collaboration and organizational skills as well as develop our skills in Python, Django, HTML/CSS/JavaScript as well as Adobe XD. # What we learned: We learned about the hardships and challenge disabled individuals face daily. We also learned how to develop an application with Django and explore the design capabilities of Adobe XD. # Next Steps ASL Rocket: Due to time constraints, we weren't able to include all of the features we had hoped to have in our mockups such as video tutorials, a login system to keep track of progress and further levels. The ASL Rocket team hopes to continue development in the near future. # Further ideas for ASL Rocket includes: Support for other disabilities such as blindness through the use of braille Integration of other sign languages such as British Sign Language (BSL) Machine learning algorithms which will be able to give constructive feedback in real-time on the ASL gestures the child is attempting to make Integration of ASL Rocket in school's curriculum around the world to help grow education and reduce inequalities of disabled Variants of ASL Rocket for different demographics such as teens and adults so that everyone can benefit from ASL
